@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2006 by Konstantin V. Arkhipov                           *
+ *   Copyright (C) 2006-2007 by Konstantin V. Arkhipov                      *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU General Public License as published by   *
@@ -13,7 +13,7 @@
 	/**
 	 * @ingroup Primitives
 	**/
-	class PrimitiveFloat extends PrimitiveNumber
+	final class PrimitiveFloat extends PrimitiveNumber
 	{
 		protected function checkNumber($number)
 		{
