@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2004-2006 by Konstantin V. Arkhipov, Anton E. Lebedevich *
+ *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov, Anton E. Lebedevich *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
  *   it under the terms of the GNU General Public License as published by   *
@@ -15,7 +15,7 @@
 	 * 
 	 * @ingroup Logic
 	**/
-	class LogicalBetween implements LogicalObject, MappableObject
+	final class LogicalBetween implements LogicalObject, MappableObject
 	{
 		private $field  = null;
 		private $left   = null;
