@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2005-2006 by Anton E. Lebedevich                        *
+ *   Copyright (C) 2005-2007 by Anton E. Lebedevich                        *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -13,7 +13,7 @@
 	/**
 	 * @ingroup OSQL
 	**/
-	class SQLJoin extends SQLBaseJoin
+	final class SQLJoin extends SQLBaseJoin
 	{
 		public function toDialectString(Dialect $dialect)
 		{
