@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006 by Anton E. Lebedevich                             *
+ *   Copyright (C) 2006-2007 by Anton E. Lebedevich                        *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -15,7 +15,7 @@
 	 *
 	 * @ingroup Calendar
 	**/
-	class CalendarWeek
+	final class CalendarWeek
 	{
 		// TODO: quite empty class, consider replacement or pull up all methods
 		private $days = array();
