@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006 by Anton E. Lebedevich                             *
+ *   Copyright (C) 2006-2007 by Anton E. Lebedevich                        *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -13,7 +13,7 @@
 	/**
 	 * @ingroup Flow
 	**/
-	class SimplePhpView implements View, Stringable
+	final class SimplePhpView implements View, Stringable
 	{
 		protected $templatePath		= null;
 		protected $partViewResolver	= null;
